@@ -1,3 +1,8 @@
+Wed Jul 31 22:50:51 2013  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
+	  system literal in external ID system notation declaration.
+
 Wed Jul 31 22:36:21 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bary_cmp): Extracted from rb_big_cmp.
